# flaskey_setdev

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
flaskey_setdev/: cli.py  generator.py
flaskey_setdev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
